# example-upload-audio

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  audio.c  audio.h  idf_component.yml
main/m5stack_core2/: m5stack_core2.c  m5stack_core2.h
main/m5stack_core2/axp192/: axp192.c  axp192.h  axp192_i2c.c  axp192_i2c.h
main/m5stack_core2/i2c_bus/: i2c_device.c  i2c_device.h
pipelines/: Octet-Stream-to-Amazon-S3.yml
